# prefect-civi

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
prefect_civi/: __init__.py  __version__.py  civiauth.py  civiclient.py  configblock.py
